Sections UPRAWA  and GALERIA styled, in KONTAKT map added

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
                  width="50" height="50">
         </h2>
 
-        <div class="h2" style="text-align: center">Sukcesy i wydarzenia z naszym udziałem:</div>
+        <div class="h2" style="text-align: center">Kompozycje i wydarzenia z naszym udziałem:</div>
         <br>
 
         <!--&lt;!&ndash; Potted Plant icon by Icons8 &ndash;&gt;-->
