Sections KONTAKT with animation

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./parallax.js/parallax.js"></script>
 
 
+
     <!--tumblr_nf78s3lzl51ruw1vso1_400.gif-->
 
 
@@ -2205,6 +2206,23 @@
 
 
 <!--<script src="./Popup-master/assets/js/jquery.popup.min.js"></script>-->
+
+
+<script src="./scrollreveal-master/dist/scrollreveal.min.js"></script>
+<script>
+    window.sr = ScrollReveal();
+    sr.reveal('.fadeInLeft', {
+        reset: true,
+        delay: 300,
+        distance: 0
+    });
+    sr.reveal('.fadeInRight', {
+        reset: true,
+        delay: 300
+    });
+</script>
+
+
 
 </body>
 <script src="./js/app.js"></script>
