--- a/index.html
+++ b/index.html
@@ -952,7 +952,7 @@
 <!--data-natural-height="1400"></div>-->
 <!--<div class="parallax-container" data-parallax="scroll" data-bleed="10" data-speed="0.2" data-image-src="./img/helix-nebula-1400x1400.jpg" data-natural-width="1400" data-natural-height="1400"></div>-->
 
-<br>
+<!--<br>-->
 <section id="gallery" class="section-five">
     <div class="additional"></div>
     <div class="container">
@@ -2205,10 +2205,9 @@
 <!--</script>-->
 
 
-<!--<script src="./Popup-master/assets/js/jquery.popup.min.js"></script>-->
 
 <!--Animacja 3 ze strony: http://grafmag.pl/artykuly/animacje-na-stronie-podczas-przewijania-okna/ :-->
-<!--Animacja wykonana na elementach fadeInLeft i fadeInRight-->
+<!--Animacja wykonana na elementach fadeInLeft i fadeInRight oraz popup-click-->
 <script src="./scrollreveal-master/dist/scrollreveal.min.js"></script>
 <script>
     window.sr = ScrollReveal();
