animation of background added

--- a/index.html
+++ b/index.html
@@ -474,6 +474,9 @@
                     <br>
                     <p class="back">--BACK--</p>
                 </div>
+                <div class="courtain">
+
+                </div>
 
             </div>
             <div class="col-md-2 col-sm-6 col-xs-6">
