some animations added

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
     <title>Carnisana</title>
     <link href="./parallax.js/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./aos-master/dist/aos.css" />
+    <link href="./css/style.css" rel="stylesheet">
 
 
     <script src="./parallax.js/js/jquery.1.11.0.min.js"></script>
@@ -1742,9 +1742,10 @@
 <script>
     AOS.init({
 //        offset: 100,
-        duration: 1500,
-//        easing: 'ease-in-sine',
-        delay: 200,
+        duration: 1500, //czas trwania animacji
+        easing: 'ease-in-sine',
+        delay: 200,  //opóźnienie animacji
+//        once: true
     });
 </script>
 
