new page added, problem with two animation conflict solved

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
     </section>
 
     <nav class="row row-header nav">
+
         <ul class="menu">
             <!--<li class="logo">Logo <span>in</span> menu</li>-->
             <!--<div class="right-div">-->
+            <!--<div class="header-background"></div>-->
             <li class="mobile-menu hidden"><a href="#"><span>Menu</span><i class="fa fa-bars"
                                                                            aria-hidden="true"></i></a></li>
             <li class="li-submenu products"><a href="#products">Produkty</a>
