menu background fixed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
     </section>
-
+    <div class="header-background"></div>
     <nav class="row row-header nav">
 
         <ul class="menu">
