Produkty page styling

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             <!--<div class="header-background"></div>-->
             <li class="mobile-menu hidden"><a href="#"><span>Menu</span><i class="fa fa-bars"
                                                                            aria-hidden="true"></i></a></li>
-            <li class="li-submenu products"><a href="#products">Produkty</a>
+            <!--<li class="li-submenu products"><a href="#products">Produkty</a>-->
+            <li class="li-submenu products"><a href="./produkty.html">Produkty</a>
                 <ul class="submenu">
                     <div class="diamond"></div>
                     <li class="category"><a href="dla-poczatkujacych-c42.html" class="menu_categories">DLA
