Produkty page styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="./set_lang.php?language=pl"><img class="flag" src="./img/Poland.png" alt="Polski"></a>
             <a href="./set_lang.php?language=en"><img class="flag" src="./img/United_Kingdom.png" alt="English"></a>
         </div>
-        <div class="logo"><img id="header-logo" src="img/img_top.png"/></div>
+        <div class="logo"><img id="header-logo" src="img/logo-clear.png"/></div>
 
 
     </section>
