--- a/produkty.html
+++ b/produkty.html
@@ -216,7 +216,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Cephalotus follicularis L
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
@@ -270,7 +270,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Cephalotus follicularis M
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
@@ -325,7 +325,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Cephalotus follicularis S
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
@@ -379,7 +379,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Cephalotus follicularis XL
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
@@ -433,7 +433,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Darlingtonia californica L
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
@@ -487,7 +487,7 @@
                 </div>
                 <div class="popup-window">
                     <p class="text-center text-uppercase heading-b">
-                        Darlingtonia
+                        Darlingtonia californica M
                     </p>
                     <p class="description">Po spełnieniu kilku warunków potrzebnych do prawidłowego rozwoju
                         darlingtonii, jej uprawa nie jest tak trudna, jak się powszechnie przyjmuje. Latem najlepiej
